deployment/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway  # Match Pods with the label "app: api-gateway"
  ports:
    - protocol: TCP
      port: 8080             # Port exposed by the Service
      targetPort: 8080     # Port on the container (the app inside the Pod)
  type: ClusterIP         # The default type, which exposes the service only inside the cluster.
