deployment/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "api.example.com"
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 8080
